--- a/tbms/src/frontend/templates/administration/virtual_machines.html
+++ b/tbms/src/frontend/templates/administration/virtual_machines.html
@@ -75,6 +75,7 @@
             </div>
             <div class="modal-body" style="background-color: #E2ECF3; width: 100%; height: 100%; max-height: 100%;">
                 <table style="width: 100%; height: 100%; max-height: 100%;">
+                    <!-- This tag -->
                     <tbody style="height: 100%; max-height: 100%;">
                     <tr style="height: 100%; max-height: 100%;">
                         <td class="col-sm-5" style="height: 100%; max-height: 100%;">
