--- a/tbms/src/frontend/templates/login.html
+++ b/tbms/src/frontend/templates/login.html
@@ -30,12 +30,13 @@
       <div class="panel panel-default" style="border-color: black; height: 100%;">
           <div class="panel-heading" align="center" style="background-color: #BCD3E6;"><strong>Log in: Already have an Account</strong></div>
         <div class="panel-body" align="left" style="height: 90%;">
-            <form class="navbar-form" action="{{ url_for('admin_servers') }}" method="POST">
+            <form class="navbar-form" action="{{ url_for('login_auth') }}" method="POST">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Username"><br>
-                    <input type="password" class="form-control" placeholder="Password"><br><br>
+                    <input type="text" class="form-control"  name="username" placeholder="Username"><br>
+                    <input type="password" class="form-control" name="password" placeholder="Password"><br><br>
                     <button type="submit" class="btn btn-default">Log in</button><br><br>
-                    <a>Forgot your password</a>
+                    <a>Forgot your password</a><br><br>
+                    <strong style="color: red;">{{ error }}</strong>
                 </div>
             </form>
         </div>
